# axolotl

./: .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  WORKSPACE.bazel  flake.nix  rust-toolchain.toml  shell.nix
nix/: devShell.nix
src/: .gitignore  json.rs  main.rs
src/css/: mod.rs  parser.rs  properties.rs  rules.rs  values.rs
src/html/: dom.rs  mod.rs  parser.rs  tokenizer.rs
tests/: .gitignore
tests/css/: basic.css  important.css  rgb.css  test.css
tests/html/: comments.html  index.html  semantic.html  test.html  void_elements.html
